get data from url and update it to list

--- a/todo_frontend/index.html
+++ b/todo_frontend/index.html
@@ -21,6 +21,13 @@
     <script>
         let todos = [];
 
+        async function loadTodos() {
+            const url = `http://localhost:3000/todos`;
+            let resp = await fetch(url);
+            todos = await resp.json();
+            render();
+        }
+
         function addTodo() {
             let todoText = todoinput.value;
             todos.push(todoText);
