logic to post data do database and request new data to show on frontend

--- a/todo_frontend/index.html
+++ b/todo_frontend/index.html
@@ -22,7 +22,7 @@
         let todos = [];
 
         async function loadTodos() {
-            const url = `http://localhost:3000/todos`;
+            const url = `http://127.0.0.1:3000/todos`;
             let resp = await fetch(url);
             todos = await resp.json();
             render();
@@ -30,23 +30,24 @@
 
         function addTodo() {
             let todoText = todoinput.value;
-            todos.push(todoText);
+            todos.push({"title": todoText});
 
             todoinput.value = '';
-            save();
+            addToServer(todoText);
             render();
         }
 
         async function loadTodos(){
-            const url = `http://localhost:3000/todos`;
+            const url = `http://127.0.0.1:3000/todos`;
             let resp = await fetch(url)
             todos = await resp.json();
             render();
         }
 
-        function save() {
-            fetch('http://127.0.0.1/todos', {
-                body: JSON.stringify(todos),
+        //Adds Text as JSON to Backend
+        function addToServer(todoText) {
+            fetch('http://127.0.0.1:3000/todos', {
+                body: JSON.stringify({"title": todoText}),
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
